dropshot/tests/fail/bad_endpoint10.stderr
error[E0271]: type mismatch resolving `<String as TypeEq>::This == HttpError`
  --> tests/fail/bad_endpoint10.rs:16:6
   |
16 | ) -> Result<HttpResponseOk<()>, String> {
   |      ^^^^^^
   |      |
   |      expected this to be `HttpError`
   |      type mismatch resolving `<String as TypeEq>::This == HttpError`
   |
note: required by a bound in `validate_result_error_type`
  --> tests/fail/bad_endpoint10.rs:16:6
   |
16 | ) -> Result<HttpResponseOk<()>, String> {
   |      ^^^^^^ required by this bound in `validate_result_error_type`

error[E0277]: the trait bound `fn(RequestContext<()>) -> impl Future<Output = Result<HttpResponseOk<()>, String>> {<impl From<bad_error_type> for ApiEndpoint<<RequestContext<()> as RequestContextArgument>::Context>>::from::bad_error_type}: dropshot::handler::HttpHandlerFunc<_, _, _>` is not satisfied
  --> tests/fail/bad_endpoint10.rs:14:10
   |
10 | / #[endpoint {
11 | |     method = GET,
12 | |     path = "/test",
13 | | }]
   | |__- required by a bound introduced by this call
14 |   async fn bad_error_type(
   |            ^^^^^^^^^^^^^^ the trait `dropshot::handler::HttpHandlerFunc<_, _, _>` is not implemented for fn item `fn(RequestContext<()>) -> impl Future<Output = Result<HttpResponseOk<()>, String>> {bad_error_type}`
   |
note: required by a bound in `ApiEndpoint::<Context>::new`
  --> src/api_description.rs
   |
   |     pub fn new<HandlerType, FuncParams, ResponseType>(
   |            --- required by a bound in this associated function
...
   |         HandlerType: HttpHandlerFunc<Context, FuncParams, ResponseType>,
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ApiEndpoint::<Context>::new`
